--- a/12_inspeccin_de_trabajo_y_seguridad_social.html
+++ b/12_inspeccin_de_trabajo_y_seguridad_social.html
@@ -138,6 +138,7 @@
 <p>A continuación se muestra un enlace de interés relacionado con la Inspección de Trabajo y Seguridad Social:</p>
 <ul>
 <li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1sTK6fVCjYUl_CNoQ_R22iOgOOeCb7lCE/view?usp=drive_link">Gestión práctica de Riesgos Laborales - La práctica de una inspección en prevención de riesgos laborales</a></span></li>
+<li><a href="https://youtu.be/HdhOl0US2pM?si=ZsLlKdnxpyGAG30M">CTAIMA - Webinar: Inspección de trabajo en España, ¿Cómo gestionar los resultados?</a></li>
 </ul>
 </div>
 </div>
