--- a/12_inspeccin_de_trabajo_y_seguridad_social.html
+++ b/12_inspeccin_de_trabajo_y_seguridad_social.html
@@ -113,17 +113,25 @@
 <p style="text-align: justify;">Pese a ser necesaria la identificación del demandante, la actuación del Inspector será <strong>completamente anónima</strong> sin que la empresa sepa en momento alguno cuál de los trabajadores realizó la denuncia. Así mismo <strong>cualquier ciudadano</strong> puede presentar ante la Inspección denuncia cuando tenga conocimiento del incumplimiento. Advierte de situaciones de peligro o menoscabo de derechos y libertades laborales y personales de los trabajadores.</p>
 <p style="text-align: justify;"><strong>Procedimiento de actuación</strong><br>Presentada la denuncia por cualquiera de las vías contempladas (<strong>presencial</strong> ante las sedes provinciales de la Inspección de Trabajo; por <strong>correo ordinario</strong> o mediante <a href="http://www.mites.gob.es/es/sede_electronica_menu/index.htm">sede electrónica</a>) analizará las pretensiones alegadas por el trabajador dando lugar al inicio del procedimiento oportuno.</p>
 <p style="text-align: justify;">Analizadas las pretensiones se decretará la fecha de Inspección día en el cual el Inspector encargado del procedimiento realizará en la sede de la empresa denunciada las investigaciones pertinentes. Finalmente y aunque el denunciante no es considerado como parte en la fase de investigación, <strong>siempre se le informará por escrito del resultado</strong> de la actuación inspectora.</p>
+<div class="exe-layout-2-cols exe-layout-2-50-50 exe-clear">
+<div class="exe-col exe-col-1">
 <figure class="exe-figure exe-media position-center license-CC-BY-NC-SA" style="width: 640px;"><iframe width="640" height="360" src="https://drive.google.com/file/d/1ZWwRYqh0-cAGnyizc88aFSBRGNKCxwlR/preview"></iframe>
-<figcaption class="figcaption"><a href="https://www.rtve.es/play/videos/aqui-hay-trabajo/" target="_blank" class="author" rel="noopener">RTVE. Aquí hay trabajo</a>. <a href="https://drive.google.com/file/d/1ZWwRYqh0-cAGnyizc88aFSBRGNKCxwlR/preview" target="_blank" class="title" rel="noopener"><em>La Inspección de Trabajo siempre responde</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=es" rel="license nofollow noopener" target="_blank" title="Creative Commons BY-NC-SA">CC BY-NC-SA</a><span class="sep">)</span></span></figcaption>
+<figcaption class="figcaption"><a href="https://www.rtve.es/play/videos/aqui-hay-trabajo/" target="_blank" class="author" rel="noopener">RTVE. Aquí hay trabajo</a>. <a href="https://www.rtve.es/play/videos/aqui-hay-trabajo/como-se-tramitan-denuncias-ante-inspeccion-trabajo/6374385/" target="_blank" class="title" rel="noopener"><em>La Inspección de Trabajo siempre responde</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=es" rel="license nofollow noopener" target="_blank" title="Creative Commons BY-NC-SA">CC BY-NC-SA</a><span class="sep">)</span></span></figcaption>
 </figure>
+</div>
+<div class="exe-col exe-col-2">
+<figure class="exe-figure exe-media position-center license-CC-BY-NC-SA" style="width: 640px;"><iframe width="640" height="360" src="https://drive.google.com/file/d/1YRO3D7K3PccDK73K1Idx2cCEy0kQbl2Z/preview"></iframe>
+<figcaption class="figcaption"><a href="https://www.rtve.es/play/videos/aqui-hay-trabajo/" target="_blank" class="author" rel="noopener">RTVE. Aquí hay trabajo</a>. <a href="https://www.rtve.es/play/videos/aqui-hay-trabajo/como-denunciar-ante-inspeccion-trabajo/16127726/" target="_blank" class="title" rel="noopener"><em>Cómo denunciar ante la Inspección de Trabajo</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=es" rel="license nofollow noopener" target="_blank" title="Creative Commons BY-NC-SA">CC BY-NC-SA</a><span class="sep">)</span></span></figcaption>
+</figure>
+</div>
+</div>
 <table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
 <tbody>
 <tr style="height: 26px;">
 <td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><img src="word-88-512_(1).png" width="30" height="30" style="vertical-align: bottom;">&nbsp;&nbsp;<a href="https://docs.google.com/document/d/1veTWYxJW9M-SWmbPM1XUHnzRhn0TWKXG/edit?usp=drive_link&amp;ouid=114523228504449818772&amp;rtpof=true&amp;sd=true">Modelo de escrito de denuncia ante la Inspección de Trabajo</a><br><img src="pdf-45_(1).png" width="30" height="30" style="vertical-align: bottom;">&nbsp;&nbsp;<a href="https://drive.google.com/file/d/1wwlwwvbxxVTfAm3AIgcqY5EcYx4Nf11i/view?usp=drive_link">Modelo de escrito de denuncia ante la Inspección de Trabajo</a></span></td>
 </tr>
 </tbody>
-</table>
-</div></div></section></div>
+</table></div></div></section></div>
 </div>
 </div>
 </div>
@@ -140,6 +148,29 @@
 <li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1sTK6fVCjYUl_CNoQ_R22iOgOOeCb7lCE/view?usp=drive_link">Gestión práctica de Riesgos Laborales - La práctica de una inspección en prevención de riesgos laborales</a></span></li>
 <li><a href="https://youtu.be/HdhOl0US2pM?si=ZsLlKdnxpyGAG30M">CTAIMA - Webinar: Inspección de trabajo en España, ¿Cómo gestionar los resultados?</a></li>
 </ul>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id77">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Prueba</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta77_127_2" class="block iDevice_content">
+<div class="exe-text"><div class="exe-layout-2-cols exe-layout-2-50-50 exe-clear">
+<div class="exe-col exe-col-1">
+<figure class="exe-figure exe-media license-CC-BY-SA position-right" style="width: 560px; text-align: center;"><iframe width="640" height="360" src="https://drive.google.com/file/d/1ZWwRYqh0-cAGnyizc88aFSBRGNKCxwlR/preview"></iframe><a href="https://www.rtve.es/play/videos/aqui-hay-trabajo/" target="_blank" class="author" rel="noopener">RTVE. Aquí hay trabajo</a>. <a href="https://drive.google.com/file/d/1ZWwRYqh0-cAGnyizc88aFSBRGNKCxwlR/preview" target="_blank" class="title" rel="noopener"><em>La Inspección de Trabajo siempre responde</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=es" rel="license nofollow noopener" target="_blank" title="Creative Commons BY-NC-SA">CC BY-NC-SA</a><span class="sep">)</span></span>
+<figcaption class="figcaption"></figcaption>
+</figure>
+</div>
+<div class="exe-col exe-col-2">
+<figure class="exe-figure exe-media position-center license-CC-BY-NC-SA" style="width: 640px;"><iframe width="640" height="360" src="https://drive.google.com/file/d/1YRO3D7K3PccDK73K1Idx2cCEy0kQbl2Z/preview"></iframe>
+<figcaption class="figcaption"><a href="https://www.rtve.es/play/videos/aqui-hay-trabajo/" target="_blank" class="author" rel="noopener">RTVE. Aquí hay trabajo</a>. <a href="https://drive.google.com/file/d/1YRO3D7K3PccDK73K1Idx2cCEy0kQbl2Z/view?usp=sharing" target="_blank" class="title" rel="noopener"><em>Cómo denunciar ante la Inspección de Trabajo</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=es" rel="license nofollow noopener" target="_blank" title="Creative Commons BY-NC-SA">CC BY-NC-SA</a><span class="sep">)</span></span></figcaption>
+</figure>
+</div>
+</div></div>
 </div>
 </div>
 </div>
