--- a/3_los_recursos_preventivos.html
+++ b/3_los_recursos_preventivos.html
@@ -97,9 +97,18 @@
 </li>
 <li style="text-align: justify;">Cuando la necesidad de dicha presencia sea <strong>requerida</strong> por la <b style="font-size: 1.05em;">Inspección de Trabajo y Seguridad Socia</b><span style="font-weight: 400;">l.</span></li>
 </ol>
-<figure class="exe-figure exe-media position-center license-standard-youtube" style="width: 560px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/7oDEPaS65Uk" allowfullscreen="allowfullscreen"></iframe>
-<figcaption class="figcaption"><a href="https://www.youtube.com/@FORMACIONPREVENCION" target="_blank" class="author" rel="noopener">Formación Prevención</a>. <a href="https://youtu.be/7oDEPaS65Uk?si=kgeAaDe3oon1f0Uf" target="_blank" class="title" rel="noopener"><em>Recurso preventivo</em></a> <span class="license"><span class="sep">(</span><a href="https://www.youtube.com/static?template=terms" rel="license nofollow noopener" target="_blank">Licencia estándar de YouTube</a><span class="sep">)</span></span></figcaption>
-</figure></div>
+<div class="exe-layout-2-cols exe-layout-2-50-50 exe-clear">
+<div class="exe-col exe-col-1">
+<figure class="exe-figure exe-media license-CC-BY-SA position-right" style="width: 560px; text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/7oDEPaS65Uk" allowfullscreen="allowfullscreen"></iframe><a href="https://www.youtube.com/@FORMACIONPREVENCION" target="_blank" class="author" rel="noopener">Formación Prevención</a>. <a href="https://youtu.be/7oDEPaS65Uk?si=kgeAaDe3oon1f0Uf" target="_blank" class="title" rel="noopener"><em>Recurso preventivo</em></a> <span class="license"><span class="sep">(</span><a href="https://www.youtube.com/static?template=terms" rel="license nofollow noopener" target="_blank">Licencia estándar de YouTube</a><span class="sep">)</span></span>
+<figcaption class="figcaption"></figcaption>
+</figure>
+</div>
+<div class="exe-col exe-col-2">
+<figure class="exe-figure exe-media license-standard-youtube" style="width: 560px;"><iframe width="560" height="314" src="https://www.youtube.com/embed/imASdIpikTw" allowfullscreen="allowfullscreen"></iframe>
+<figcaption class="figcaption"><a href="https://www.youtube.com/@prevencionderiesgos_sps" target="_blank" class="author" rel="noopener">Hablemos de Prevención de Riesgos Laborales</a>. <a href="https://youtu.be/imASdIpikTw?si=8Dc6m1Cj-tF7NCda" target="_blank" class="title" rel="noopener"><em>Descubre todo sobre los Recursos Preventivos</em></a> <span class="license"><span class="sep">(</span><a href="https://www.youtube.com/static?template=terms" rel="license nofollow noopener" target="_blank">Licencia estándar de YouTube</a><span class="sep">)</span></span></figcaption>
+</figure>
+</div>
+</div></div>
 </div>
 </div>
 </div>
